# LinkedIn_Job_Connections

./: .gitignore  README.md  architecture.md  azure-pipelines-1.yml  azure-pipelines.yml  cd-pipeline.yml  ci-pipeline.yml  ci-pipelines.yml  todo.md
backend/: .dockerignore  .env  Dockerfile  pyproject.toml  seed_test_data.py  test_supabase.py
backend/app/: main.py
backend/app/api/: connections.py  jobs.py  matches.py
backend/app/core/: ai_client.py  database.py  logger.py  schemas.py
backend/app/models/: cache.py  connection.py  job.py
backend/app/services/: ai_cache_handler.py  ai_drafter.py  ai_engine.py  ai_matcher.py  csv_parser.py  excel_exporter.py  job_scraper.py  scheduler.py
backend/backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/migrations/: env.py
backend/migrations/versions/: 191e5b1be7b9_add_unique_constraint_to_linkedin_connections.py  4e741f4caaef_add_linkedin_connections_table.py  bd1ac0a13ce9_add_match_cache_table.py  d1d470b379a0_initial_schema_setup.py  d30b90cdf120_create_match_cache_table.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/connections/: page.tsx
frontend/app/jobs/: page.tsx
frontend/app/matches/: page.tsx
frontend/components/layout/: header.tsx  sidebar.tsx
frontend/components/ui/: dropdown-menu.tsx
frontend/lib/: api.ts
frontend/src/app/connections/: columns.tsx
frontend/src/app/matches/: page.tsx
linkhunter-ai/: README.md
linkhunter-ai/backend/: pyproject.toml
linkhunter-ai/frontend/: package-lock.json  package.json
