[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "apscheduler>=3.11.2",
    "azure-ai-inference>=1.0.0b9",
    "beautifulsoup4>=4.15.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.138.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "sqlalchemy>=2.0.51",
]
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# 🆕 Add this block to explicitly configure discovery rules
[tool.setuptools.packages.find]
include = ["app*"]  # Only package the app folder and its submodules
exclude = ["migrations*"]  # Explicitly prevent migrations from being treated as a library package