[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "beautifulsoup4>=4.15.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "psycopg>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
]
